Supporting skos vocabularies